--- a/RaspPi3.MqttBrokerHostVisual/project.json
+++ b/RaspPi3.MqttBrokerHostVisual/project.json
@@ -1,7 +1,8 @@
 ﻿{
   "dependencies": {
     "GnatMQ": "1.1.0",
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
+    "Okra.MEF": "1.2.0"
   },
   "frameworks": {
     "uap10.0": {}
