--- a/RaspPi3.MqttBrokerPiConsumer/project.json
+++ b/RaspPi3.MqttBrokerPiConsumer/project.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "M2Mqtt": "4.3.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
-    "Okra.MEF": "1.2.0"
+    "Okra.MEF": "1.2.0",
+    "WindowsAzure.MobileServices": "1.3.2"
   },
   "frameworks": {
     "uap10.0": {}
