--- a/RaspPi3.MqttBrokerPiConsumer/project.json
+++ b/RaspPi3.MqttBrokerPiConsumer/project.json
@@ -3,7 +3,7 @@
     "M2Mqtt": "4.3.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
     "Okra.MEF": "1.2.0",
-    "WindowsAzure.MobileServices": "1.3.2"
+    "SQLite.Net-PCL": "3.1.1"
   },
   "frameworks": {
     "uap10.0": {}
