--- a/RaspPi3.WebApi/Web.config
+++ b/RaspPi3.WebApi/Web.config
@@ -21,6 +21,17 @@
     </httpModules>
   </system.web>
   <system.webServer>
+    <rewrite>
+      <rules>
+        <rule name="Force HTTPS" enabled="true">
+          <match url="(.*)" ignoreCase="false" />
+          <conditions>
+            <add input="{HTTPS}" pattern="off" />
+          </conditions>
+          <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" appendQueryString="true" redirectType="Permanent" />
+        </rule>
+      </rules>
+    </rewrite>
     <modules>
       <remove name="FormsAuthentication" />
       <remove name="ApplicationInsightsWebTracking" />
