--- a/RaspPi3.WebApi/Areas/HelpPage/Views/Web.config
+++ b/RaspPi3.WebApi/Areas/HelpPage/Views/Web.config
@@ -25,7 +25,7 @@
   </appSettings>
 
   <system.web>
-    <compilation debug="false">
+    <compilation debug="true">
       <assemblies>
         <add assembly="System.Net.Http, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
       </assemblies>
