--- a/RaspPi3.WebApi/Views/Web.config
+++ b/RaspPi3.WebApi/Views/Web.config
@@ -26,18 +26,18 @@
     <add key="webpages:Enabled" value="false" />
   </appSettings>
 
+  <system.web>
+    <compilation debug="true">
+      <assemblies>
+        <add assembly="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+      </assemblies>
+    </compilation>
+  </system.web>
+
   <system.webServer>
     <handlers>
       <remove name="BlockViewHandler"/>
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
     </handlers>
   </system.webServer>
-
-  <system.web>
-    <compilation debug="false">
-      <assemblies>
-        <add assembly="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-      </assemblies>
-    </compilation>
-  </system.web>
 </configuration>
