--- a/RaspPi3.WebApi/packages.config
+++ b/RaspPi3.WebApi/packages.config
@@ -5,6 +5,8 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="2.2.4" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.15.0" targetFramework="net452" />
+  <package id="Knockout.Validation" version="2.0.3" targetFramework="net452" />
+  <package id="knockoutjs" version="3.4.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="1.2.1" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.1.0" targetFramework="net452" />
@@ -43,5 +45,6 @@
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
+  <package id="Sammy.js" version="0.7.5" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
