--- a/RaspPi3.MqttBrokerPiConsumer/project.json
+++ b/RaspPi3.MqttBrokerPiConsumer/project.json
@@ -1,6 +1,7 @@
 ﻿{
   "dependencies": {
     "M2Mqtt": "4.3.0",
+    "Microsoft.AspNet.WebApi.Client": "5.2.3",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
     "Okra.MEF": "1.2.0",
     "SQLite.Net-PCL": "3.1.1"
