--- a/RaspPi3.MqttBrokerPiConsumer/RaspPi3.MqttBrokerPiConsumer.csproj
+++ b/RaspPi3.MqttBrokerPiConsumer/RaspPi3.MqttBrokerPiConsumer.csproj
@@ -107,7 +107,7 @@
     <Compile Include="Model\MqttConnection.cs" />
     <Compile Include="Model\MqttMessage.cs" />
     <Compile Include="Model\MqttTopic.cs" />
-    <Compile Include="Model\MqttUser.cs" />
+    <Compile Include="Model\Users.cs" />
     <Compile Include="Model\SQLiteHandler.cs" />
     <Compile Include="Model\MqttConnector.cs" />
     <Compile Include="Model\WebApiMessage.cs" />
