--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,13 @@ bld/
 [Bb]in/
 [Oo]bj/
 
-# Visual Studio 2015 cache/options directory
+# IDEs and editors
 .vs/
+/.idea
+
+# IDE - VSCode
+.vscode/*
+
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
