--- a/RaspPi3.WebApi/packages.config
+++ b/RaspPi3.WebApi/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
+  <package id="Microsoft.Exchange.WebServices" version="2.2" targetFramework="net452" />
+  <package id="Microsoft.Web.WebJobs.Publish" version="17.1.361" targetFramework="net452" />
   <package id="bootstrap" version="3.3.6" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="2.2.4" targetFramework="net452" />
